--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
 .card_item {
   border: 1px solid rgba(223, 225, 229, 0);
   padding: 10px;
+  margin: 10px;
   border-radius: 10px;
   box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
 }
