--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ body {
   margin: 10px;
   border-radius: 10px;
   box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
+  max-width: 300px;
 }
 
 .card_item img {
