--- a/src/index.css
+++ b/src/index.css
@@ -20,5 +20,11 @@ body {
 }
 
 .card_item img {
-  border-radius: 10px;
+  max-width: 280px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
